# pgp-decryptor

./: LICENSE  README.md  pyproject.toml  test.py
pgp_decryptor/: cli.py  decryptor.py
